@@ -1,5 +1,6 @@
 2021.??.??
   * Added detection of Dolby Vision in release name and video file
+  * bB: Added support for Dolby Vision tag
   * bB: Retry login up to 30 times instead of 15 when encountering login bug and
     cap the delay between login attempts at 5 seconds.
 
